<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TitleTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:text="@string/nzb_settings_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:text="@string/sab_api_title" />

        <EditText
            android:id="@+id/sab_api_key_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:text="@string/sab_username_title" />

        <EditText
            android:id="@+id/sab_username_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:text="@string/password_title" />

        <EditText
            android:id="@+id/sab_password_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:text="@string/ip_address_title" />

        <EditText
            android:id="@+id/sab_ip_address_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:ems="10" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:text="@string/port_title" />

        <EditText
            android:id="@+id/sab_port_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_padding"
            android:layout_marginRight="@dimen/text_padding"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/sab_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSaveClicked"
                android:text="@string/save_text" />

            <Button
                android:id="@+id/sab_button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onTestClicked"
                android:text="@string/test_connection_text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>